<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search_screen.SearchFragment">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tab_background_unselected"
        android:iconifiedByDefault="false"
        android:queryBackground="@null"
        android:queryHint="@string/search"
        android:textAlignment="viewStart" />

    <include
        android:id="@+id/movies_list_layout"
        layout="@layout/fragment_movies_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/warning_image"
            android:src="@drawable/experience_ocean"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.297" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no_result_found_try_searching_again"
            android:textAlignment="center"
            android:textColor="#FB0000"
            app:layout_constraintTop_toBottomOf="@id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>